tested on firefox and margin fix

--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -6,7 +6,7 @@ ul{
 
 ul > li{
 	float: left;
-	margin-left: 5px;
+	margin-left: 19px;
 }
 
 .title{
